dirty fix of canvas jumping out of body

--- a/game/style.css
+++ b/game/style.css
@@ -7,7 +7,8 @@
 }
 
 body {
-  width: 90%;
+  width: 590px;
+  float: left;
 }
 
 #header {
@@ -18,6 +19,7 @@ body {
 }
 
 canvas {
+  margin: 0px;
   padding: 20px;
   background-color: var(--main-color-yellow);
   float: left;
@@ -25,13 +27,6 @@ canvas {
 
 header > h1:hover {
   cursor: pointer; /* pointer */
-}
-
-.main {
-  background-color: var(--main-color-yellow);
-  padding: 20px;
-  width: 100%;
-  text-align: center;
 }
 
 .instructions-div {
@@ -56,27 +51,4 @@ div > p {
 
 li {
   list-style-type: none;
-}
-
-.gameNavigate {
-  background-color: var(--main-color-purple);
-  width: 20%;
-  border: none;
-  outline: none;
-  border-radius: 10px;
-  color: white; /* White text */
-  padding: 40px 60px; /* Some padding */
-  cursor: pointer;
-  float: none;
-  font-size: large;
-  box-shadow: 0 10px #999;
-}
-
-.gameNavigate:hover {
-  background-color: #3e8e41;
-}
-
-.gameNavigate:active {
-  box-shadow: 0 3px #666;
-  transform: translateY(4px);
 }
